--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.10/lodash.min.js"></script>
 
         <!-- Our Application Logic -->
+        <script src="api.js"></script>
          <script src="app.js"></script>
+
+         <script src="ListRow.js"></script>
+         <script src="Search.js"></script>
+         <script src="ListContainer.js"></script>
     </body>
 </html>
